--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   
   "name": "Refresh Active Frame",
-  "description": "This extension let you refresh a frame with keyborad shoutcut (Cmd+Ctrl+R on Mac, Alt+Shift+R otherwise), if no frame is active it will fallback to refresh the whole page",
-  "version": "1.0",
+  "description": "Refresh active frame or ifrmae with keyboard shortcut, fallback to refresh page if active element is not a frame",
+  "version": "1.1",
   "icons": {
     "128": "icon-128.png"
   },
@@ -11,11 +11,10 @@
   "homepage_url": "https://www.howang.hk/",
   
   "background": {
-    "scripts": ["eventPage.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
   
-  "browser_action": {
+  "action": {
     "default_icon": "icon-19.png",
     "default_title": "Refresh Active Frame"
   },
@@ -31,6 +30,7 @@
   },
   
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "scripting"
   ]
 }
